     same color as thier dot in the graph. (Gary van der Merwe)
 * qcat:
   * Line numbers are now shown when viewing text files. (Gary van der Merwe)
 * qannotate:
   * It is now possible to select and copy text from qannotate. (Bug #251309,
     Gary van der Merwe)
   * Show all revisions that touch the file in the log list. (Bug #488824,
     Gary van der Merwe)
 * treewidget (used in qcommit, qadd, qrevert, and qbrowse):
   * Fixed compatibility with PyQt < 4.6. 
     (Bug #479093, Bug #478979, Gary van der Merwe)
   * Extended keyboard navigation: pressing Enter invokes default action
     for selected item. (Bug #483597, Alexander Belchenko)
   * Fixed is_ignored() check (versioned file that matches ignore pattern
     should not be called "ignored"). (Bug #487560, Alexander Belchenko)


0.16 "Acacia" - 2009/11/9
-------------------------
What's new in this release:

 * qswitch:
   * Added support for --create-branch option to "bzr switch". (A. S. Budden)
 * SubprocessUIFactory and QUIFactory now both support get_username, and
   get_boolean. (Bug #421851, Gary van der Merwe)
 * Save the size of Dialogs when the user press Esc. (Bug #417809,
   Gary van der Merwe)
 * qlog:
   * Get the max main_line digets in a different way so that we don't break 
     --no-graph. (Bug #455867, Gary van der Merwe)
   * Corrected the margin for the revision number column. (Gary van der Merwe)
   * When loading the file list delta, only lock the repositories that are
     being used. If the 2 trees are from the same repositories, load them 
     together. (Gary van der Merwe)
   * When viewing a svn repo, only show the file list if 1 revision is selected,
     and if so, use a optimized method to do so. (Bug #450225,
     Gary van der Merwe)
   * Show a throbber above the file list while a delta is being loaded.
     (Gary van der Merwe)
   * Fix a bug when refreshing a branch with revisions that have been removed.
     (Bug #435486, Gary van der Merwe)
 * qlog/qannotate: