@@ -29,6 +29,10 @@ What's new in this release:
      Gary van der Merwe)
    * Show all revisions that touch the file in the log list. (Bug #488824,
      Gary van der Merwe)
+ * qsubprocess:
+   * Catch possible errors from bencode decoder is we got malformed string
+     from child process. Show the error nicely. 
+     (Bug #484624, Alexander Belchenko)
  * treewidget (used in qcommit, qadd, qrevert, and qbrowse):
    * Fixed compatibility with PyQt < 4.6. 
      (Bug #479093, Bug #478979, Gary van der Merwe)
